--- a/package.json
+++ b/package.json
@@ -1,39 +1,42 @@
 {
   "name": "hanako-scss",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
-  "main": "index.js",
+  "homepage": "https://github.com/harkle/hanako-scss",
+  "bugs": {
+    "url": "https://github.com/harkle/hanako-scss/issues"
+  },
+  "style": "scss/_index.scss",
   "devDependencies": {
     "autoprefixer": "^10.2.5",
-    "bootstrap": "^5.0.0-beta2",
     "css-loader": "^5.1.1",
     "cssnano": "^4.1.10",
     "eslint": "^7.21.0",
     "event-hooks-webpack-plugin": "^2.2.0",
     "file-loader": "^6.2.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^4.5.2",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.3.9",
     "path": "^0.12.7",
-    "postcss-loader": "^4.2.0",
+    "postcss-loader": "^5.2.0",
     "sass": "^1.32.8",
-    "sass-loader": "^10.1.1",
+    "sass-loader": "^11.0.1",
     "stylelint": "^13.12.0",
-    "stylelint-config-property-sort-order-smacss": "^6.4.0",
+    "stylelint-config-property-sort-order-smacss": "^7.0.0",
     "stylelint-order": "^4.1.0",
     "ts-loader": "^8.0.17",
     "typescript": "^4.2.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.2.1"
+    "webpack": "^5.31.0",
+    "webpack-cli": "^4.6.0"
   },
   "scripts": {
-    "compile": "webpack --config webpack.config.js",
-    "serve": "webpack-dev-server"
+    "compile": "webpack --config webpack.config.js"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "boostrap": "^2.0.0"
-  }
+  "author": {
+    "name": "Lionel Tardy",
+    "email": "mail@lionel.me",
+    "url": "https://github.com/harkle"
+  },
+  "license": "MIT"
 }
